feat: Implement profile-based filter and backend configurations for rclone commands and remove auto-start flags.

--- a/src/app/features/components/file-browser/nautilus/nautilus.component.html
+++ b/src/app/features/components/file-browser/nautilus/nautilus.component.html
@@ -697,7 +697,7 @@
           <mat-icon svgIcon="remove"></mat-icon>
         </button>
         <button (click)="increaseIconSize()" [disabled]="increaseIconDisabled()">
-          <mat-icon svgIcon="add"></mat-icon>
+          <mat-icon svgIcon="plus"></mat-icon>
         </button>
       </div>
     </div>
