--- a/src/app/features/modals/remote-management/quick-add-remote/quick-add-remote.component.html
+++ b/src/app/features/modals/remote-management/quick-add-remote/quick-add-remote.component.html
@@ -265,7 +265,7 @@
           @if (isAuthInProgress && !isAuthCancelled) {
             <mat-spinner diameter="20"></mat-spinner>
           } @else {
-            <mat-icon svgIcon="add"></mat-icon>
+            <mat-icon svgIcon="plus"></mat-icon>
           }
           <span>{{ getSubmitButtonText() }}</span>
         </button>
