--- a/src/app/features/modals/settings/preferences-modal/preferences-modal.component.html
+++ b/src/app/features/modals/settings/preferences-modal/preferences-modal.component.html
@@ -309,7 +309,7 @@
                       (meta.max_value ?? 1000000000000)
                     "
                   >
-                    <mat-icon svgIcon="add"></mat-icon>
+                    <mat-icon svgIcon="plus"></mat-icon>
                   </button>
                 </div>
               }
@@ -389,7 +389,7 @@
                     (click)="addArrayItem(category, key)"
                     [attr.aria-label]="'Add new ' + meta.display_name + ' item'"
                   >
-                    <mat-icon svgIcon="add"></mat-icon> Add Item
+                    <mat-icon svgIcon="plus"></mat-icon> Add Item
                   </button>
                 </div>
               }
