--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -45,11 +45,11 @@
             </p>
             <div class="empty-state-actions">
               <button matButton="filled" class="primary" (click)="openQuickAddRemoteModal()">
-                <mat-icon svgIcon="add"></mat-icon>
+                <mat-icon svgIcon="plus"></mat-icon>
                 Add Quick Remote
               </button>
               <button matButton="filled" class="accent" (click)="openRemoteConfigModal()">
-                <mat-icon svgIcon="add"></mat-icon>
+                <mat-icon svgIcon="plus"></mat-icon>
                 Add Detailed Remote
               </button>
             </div>
