--- a/src/app/layout/titlebar/titlebar.component.html
+++ b/src/app/layout/titlebar/titlebar.component.html
@@ -2,7 +2,7 @@
   <div class="left-section">
     <!-- Main Buttons -->
     <button matIconButton [cdkMenuTriggerFor]="addRemoteMenu" aria-label="Add remote menu">
-      <mat-icon svgIcon="add" aria-hidden="true"></mat-icon>
+      <mat-icon svgIcon="plus" aria-hidden="true"></mat-icon>
     </button>
 
     <button matIconButton (click)="resetRemote()" aria-label="Home">
