--- a/src/app/shared/components/setting-control/setting-control.component.html
+++ b/src/app/shared/components/setting-control/setting-control.component.html
@@ -1,4 +1,3 @@
-<div class="settings-list">
   @if (control()) {
     <ng-template #settingInfo let-opt>
       <div class="setting">
@@ -90,7 +89,7 @@
             (mouseleave)="stopHold()"
             (touchend)="stopHold()"
           >
-            <mat-icon svgIcon="add"></mat-icon>
+            <mat-icon svgIcon="plus"></mat-icon>
           </button>
         </div>
       </div>
@@ -220,7 +219,7 @@
                 </div>
               }
               <button mat-stroked-button class="add-array-item-btn" (click)="addArrayItem()">
-                <mat-icon svgIcon="add"></mat-icon>
+                <mat-icon svgIcon="plus"></mat-icon>
                 Add Item
               </button>
             </div>
@@ -410,7 +409,7 @@
                 </div>
               }
               <button mat-stroked-button class="add-array-item-btn" (click)="addArrayItem()">
-                <mat-icon svgIcon="add"></mat-icon>
+                <mat-icon svgIcon="plus"></mat-icon>
                 Add Item
               </button>
             </div>
@@ -443,7 +442,7 @@
                 </div>
               }
               <button mat-stroked-button class="add-array-item-btn" (click)="addArrayItem()">
-                <mat-icon svgIcon="add"></mat-icon>
+                <mat-icon svgIcon="plus"></mat-icon>
                 Add Item
               </button>
             </div>
@@ -468,4 +467,3 @@
       }
     </div>
   }
-</div>
